--- a/package.json
+++ b/package.json
@@ -17,12 +17,25 @@
     "performance": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@assistant-ui/react": "^0.10.33",
+    "@assistant-ui/react-markdown": "^0.10.6",
+    "@assistant-ui/styles": "^0.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "ai": "^4.3.19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2",
+    "lucide-react": "^0.534.0",
+    "openai": "^5.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0",
     "react-loading-skeleton": "^3.5.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "react-router-dom": "^7.7.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
