--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --port 5173 --host 0.0.0.0",
+    "build": "vite build --outDir dist",
     "build:analyze": "vite build && npx vite-bundle-analyzer dist/stats.html",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -30,6 +30,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "lucide-react": "^0.534.0",
     "openai": "^5.12.2",
     "react": "^19.1.0",
