done with the chatbot part one

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "TeleKiosk - The Bank Hospital",
+  "name": "TeleKiosk - TeleKiosk Hospital",
   "short_name": "TeleKiosk",
   "description": "Modern hospital kiosk and web application with AI chatbot and voice recognition",
   "start_url": "/",
